Install All button shown for long list of apps
Testing RHEL 10 with gnome-software 46.2:
- Open an audio file in Files
- A "could not display " message dialog is shown, with a "Search in Software" button - I click it
- Software pops up with a list of matching apps and an "Install All" button at the top
The Install All button isn't helpful here - showing it seems like a mistake.