gs-extras-page: Let install in bulk only codecs

The extras page can show various app kinds, while the "Install All"
button was meant to be shown only for codecs, thus limit when it's
visible.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/2603